# rs-abbreviation-number

./: Cargo.toml  LICENSE  README.md
src/: calculation.rs  float.rs  lib.rs  main.rs  time.rs
tests/: abbreviate_tests.rs  fraction_abbreviate_tests.rs  fraction_unabbreviate_tests.rs  time_tests.rs  unabbreviate_tests.rs
time_macro/: Cargo.toml
time_macro/src/: lib.rs
time_macro/time_macro_derive/: Cargo.toml
time_macro/time_macro_derive/src/: lib.rs
